@@ -1,0 +1,22 @@
+000040040000
+000000000000
+000040011011
+011100000100
+100010011111
+111110000000
+000000010001
+100010010001
+101010011111
+111110000000
+000000010001
+100010010101
+101010011111
+111110000000
+000000011111
+111040000100
+101000011111
+111110000000
+000000010001
+101110010001
+101010011111
+111010000000
